# sanity

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
examples/hello-scripting/www/: _index.html.j2  _page.html.j2  render.lua
examples/hello-world/www/: _base.html.j2
sanity/: Cargo.toml
sanity-macros/: Cargo.toml
sanity-macros/src/: lib.rs
sanity/examples/: README.md
sanity/examples/hello-scripting/: README.md
sanity/examples/hello-scripting/www/: _page.html.j2
sanity/examples/hello-world/: README.md
sanity/examples/hello-world/www/: index.html.j2  page.html.j2  style.scss
sanity/src/: build.rs  fs.rs  jinja2.rs  lib.lua  main.rs  minify.rs  paths.rs
sanity/src/lua/: fns.rs  mod.rs
src/: build.rs  error.html  fs.rs  fsutil.rs  jinja2.rs  lib.lua  lua.rs  main.rs  minify.rs  paths.rs  poison.rs
