[package]
name = "sanity"
version = "0.2.0"
edition = "2024"

[features]
default = []

[dependencies]

clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
grass = "0.13.4"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["full"] }
minijinja = { version = "2.19.0", features = ["loader", "multi_template"] }
notify-debouncer-full = "0.7.0"
tokio = { version = "1.51.0", features = ["full"] }
pretty_env_logger = "0.5.0"
log = { version = "0.4.29", features = ["std"] }
mlua = { version = "0.11.6", features = [
    "luajit",
    "serialize",
    "send",
    "error-send",
    "vendored",
] }
serde = { version = "1.0.228", features = ["alloc"] }
serde_json = { version = "1.0.149", features = ["alloc"] }
chrono = "0.4.44"

minify-html-onepass = "0.18.1"

# make sure to sync the version of these with the one demanded by `minify-html-onepass`, in order to shrink the dependency count by a bit.
oxc_minifier = "0.95.0"
oxc_parser = "0.95.0"
oxc_allocator = "0.95.0"
oxc_span = "0.95.0"
oxc_codegen = "0.95.0"
